added phrase wooptydoop

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1 class="green">My first github project!</h1>
-    <p>hello</p>
+    <p>hello wooptydoop</p>
 </body>
 </html>
